Spring/src/Spring/src/grammar/generated/ToylangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/akhoroshev/Documents/spring-lang/Spring/src/Spring/src/grammar/Toylang.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ToylangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, KW_RETURN=7, KW_ELSE=8, 
		KW_IF=9, KW_FUN=10, KW_VAR=11, KW_WHILE=12, OP_LOGICAL=13, OP_EQ=14, OP_ADDITIONAL=15, 
		OP_COMPARE=16, OP_MULTIPLY=17, IDENTIFIER=18, INTEGER_LITERAL=19, COMMENT=20, 
		WS=21, UNKNOWN=22;
	public const int
		RULE_file = 0, RULE_block = 1, RULE_blockWithBraces = 2, RULE_statement = 3, 
		RULE_stmtComment = 4, RULE_stmtFunction = 5, RULE_stmtVariable = 6, RULE_functionParameterNames = 7, 
		RULE_stmtWhile = 8, RULE_stmtIf = 9, RULE_stmtAssigment = 10, RULE_stmtReturn = 11, 
		RULE_stmtExpression = 12, RULE_functionCall = 13, RULE_functionArguments = 14, 
		RULE_binaryExpression = 15, RULE_logicalExpression = 16, RULE_eqExpression = 17, 
		RULE_compareExpression = 18, RULE_additionExpression = 19, RULE_multiplyExpression = 20, 
		RULE_atomExpression = 21, RULE_identifier = 22, RULE_integralLiteral = 23;
	public static readonly string[] ruleNames = {
		"file", "block", "blockWithBraces", "statement", "stmtComment", "stmtFunction", 
		"stmtVariable", "functionParameterNames", "stmtWhile", "stmtIf", "stmtAssigment", 
		"stmtReturn", "stmtExpression", "functionCall", "functionArguments", "binaryExpression", 
		"logicalExpression", "eqExpression", "compareExpression", "additionExpression", 
		"multiplyExpression", "atomExpression", "identifier", "integralLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'('", "')'", "'='", "','", "'return'", "'else'", 
		"'if'", "'fun'", "'var'", "'while'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "KW_RETURN", "KW_ELSE", "KW_IF", 
		"KW_FUN", "KW_VAR", "KW_WHILE", "OP_LOGICAL", "OP_EQ", "OP_ADDITIONAL", 
		"OP_COMPARE", "OP_MULTIPLY", "IDENTIFIER", "INTEGER_LITERAL", "COMMENT", 
		"WS", "UNKNOWN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Toylang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ToylangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ToylangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ToylangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ToylangParser.Eof, 0); }
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; block();
			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << KW_RETURN) | (1L << KW_IF) | (1L << KW_FUN) | (1L << KW_VAR) | (1L << KW_WHILE) | (1L << IDENTIFIER) | (1L << INTEGER_LITERAL) | (1L << COMMENT))) != 0)) {
				{
				{
				State = 51; statement();
				}
				}
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockWithBracesContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public BlockWithBracesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockWithBraces; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterBlockWithBraces(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitBlockWithBraces(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockWithBraces(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockWithBracesContext blockWithBraces() {
		BlockWithBracesContext _localctx = new BlockWithBracesContext(Context, State);
		EnterRule(_localctx, 4, RULE_blockWithBraces);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; Match(T__0);
			State = 58; block();
			State = 59; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StmtFunctionContext stmtFunction() {
			return GetRuleContext<StmtFunctionContext>(0);
		}
		public StmtVariableContext stmtVariable() {
			return GetRuleContext<StmtVariableContext>(0);
		}
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public StmtWhileContext stmtWhile() {
			return GetRuleContext<StmtWhileContext>(0);
		}
		public StmtIfContext stmtIf() {
			return GetRuleContext<StmtIfContext>(0);
		}
		public StmtAssigmentContext stmtAssigment() {
			return GetRuleContext<StmtAssigmentContext>(0);
		}
		public StmtReturnContext stmtReturn() {
			return GetRuleContext<StmtReturnContext>(0);
		}
		public StmtCommentContext stmtComment() {
			return GetRuleContext<StmtCommentContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61; stmtFunction();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; stmtVariable();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63; stmtExpression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64; stmtWhile();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 65; stmtIf();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 66; stmtAssigment();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 67; stmtReturn();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 68; stmtComment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtCommentContext : ParserRuleContext {
		public ITerminalNode COMMENT() { return GetToken(ToylangParser.COMMENT, 0); }
		public StmtCommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtComment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtComment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtComment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtCommentContext stmtComment() {
		StmtCommentContext _localctx = new StmtCommentContext(Context, State);
		EnterRule(_localctx, 8, RULE_stmtComment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtFunctionContext : ParserRuleContext {
		public ITerminalNode KW_FUN() { return GetToken(ToylangParser.KW_FUN, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ToylangParser.IDENTIFIER, 0); }
		public FunctionParameterNamesContext functionParameterNames() {
			return GetRuleContext<FunctionParameterNamesContext>(0);
		}
		public BlockWithBracesContext blockWithBraces() {
			return GetRuleContext<BlockWithBracesContext>(0);
		}
		public StmtFunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtFunction; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtFunctionContext stmtFunction() {
		StmtFunctionContext _localctx = new StmtFunctionContext(Context, State);
		EnterRule(_localctx, 10, RULE_stmtFunction);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(KW_FUN);
			State = 74; Match(IDENTIFIER);
			State = 75; Match(T__2);
			State = 76; functionParameterNames();
			State = 77; Match(T__3);
			State = 78; blockWithBraces();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtVariableContext : ParserRuleContext {
		public ITerminalNode KW_VAR() { return GetToken(ToylangParser.KW_VAR, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ToylangParser.IDENTIFIER, 0); }
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public StmtVariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtVariable; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtVariableContext stmtVariable() {
		StmtVariableContext _localctx = new StmtVariableContext(Context, State);
		EnterRule(_localctx, 12, RULE_stmtVariable);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(KW_VAR);
			State = 81; Match(IDENTIFIER);
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 82; Match(T__4);
				State = 83; stmtExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterNamesContext : ParserRuleContext {
		public IToken _IDENTIFIER;
		public IList<IToken> _parameters = new List<IToken>();
		public ITerminalNode[] IDENTIFIER() { return GetTokens(ToylangParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(ToylangParser.IDENTIFIER, i);
		}
		public FunctionParameterNamesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameterNames; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterFunctionParameterNames(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitFunctionParameterNames(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameterNames(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterNamesContext functionParameterNames() {
		FunctionParameterNamesContext _localctx = new FunctionParameterNamesContext(Context, State);
		EnterRule(_localctx, 14, RULE_functionParameterNames);
		int _la;
		try {
			State = 95;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 86; _localctx._IDENTIFIER = Match(IDENTIFIER);
				_localctx._parameters.Add(_localctx._IDENTIFIER);
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__5) {
					{
					{
					State = 87; Match(T__5);
					State = 88; _localctx._IDENTIFIER = Match(IDENTIFIER);
					_localctx._parameters.Add(_localctx._IDENTIFIER);
					}
					}
					State = 93;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtWhileContext : ParserRuleContext {
		public ITerminalNode KW_WHILE() { return GetToken(ToylangParser.KW_WHILE, 0); }
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public BlockWithBracesContext blockWithBraces() {
			return GetRuleContext<BlockWithBracesContext>(0);
		}
		public StmtWhileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtWhile; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtWhileContext stmtWhile() {
		StmtWhileContext _localctx = new StmtWhileContext(Context, State);
		EnterRule(_localctx, 16, RULE_stmtWhile);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(KW_WHILE);
			State = 98; Match(T__2);
			State = 99; stmtExpression();
			State = 100; Match(T__3);
			State = 101; blockWithBraces();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtIfContext : ParserRuleContext {
		public BlockWithBracesContext branchThen;
		public BlockWithBracesContext branchElse;
		public ITerminalNode KW_IF() { return GetToken(ToylangParser.KW_IF, 0); }
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public BlockWithBracesContext[] blockWithBraces() {
			return GetRuleContexts<BlockWithBracesContext>();
		}
		public BlockWithBracesContext blockWithBraces(int i) {
			return GetRuleContext<BlockWithBracesContext>(i);
		}
		public ITerminalNode KW_ELSE() { return GetToken(ToylangParser.KW_ELSE, 0); }
		public StmtIfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtIf; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtIfContext stmtIf() {
		StmtIfContext _localctx = new StmtIfContext(Context, State);
		EnterRule(_localctx, 18, RULE_stmtIf);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(KW_IF);
			State = 104; Match(T__2);
			State = 105; stmtExpression();
			State = 106; Match(T__3);
			{
			State = 107; _localctx.branchThen = blockWithBraces();
			}
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==KW_ELSE) {
				{
				State = 108; Match(KW_ELSE);
				State = 109; _localctx.branchElse = blockWithBraces();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtAssigmentContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ToylangParser.IDENTIFIER, 0); }
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public StmtAssigmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtAssigment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtAssigment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtAssigment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtAssigment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtAssigmentContext stmtAssigment() {
		StmtAssigmentContext _localctx = new StmtAssigmentContext(Context, State);
		EnterRule(_localctx, 20, RULE_stmtAssigment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(IDENTIFIER);
			State = 113; Match(T__4);
			State = 114; stmtExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtReturnContext : ParserRuleContext {
		public ITerminalNode KW_RETURN() { return GetToken(ToylangParser.KW_RETURN, 0); }
		public StmtExpressionContext stmtExpression() {
			return GetRuleContext<StmtExpressionContext>(0);
		}
		public StmtReturnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtReturn; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtReturn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtReturn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtReturn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtReturnContext stmtReturn() {
		StmtReturnContext _localctx = new StmtReturnContext(Context, State);
		EnterRule(_localctx, 22, RULE_stmtReturn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(KW_RETURN);
			State = 117; stmtExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtExpressionContext : ParserRuleContext {
		public BinaryExpressionContext binaryExpression() {
			return GetRuleContext<BinaryExpressionContext>(0);
		}
		public StmtExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.EnterStmtExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IToylangListener typedListener = listener as IToylangListener;
			if (typedListener != null) typedListener.ExitStmtExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IToylangVisitor<TResult> typedVisitor = visitor as IToylangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtExpressionContext stmtExpression() {
		StmtExpressionContext _localctx = new StmtExpressionContext(Context, State);
		EnterRule(_localctx, 24, RULE_stmtExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; binaryExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
